added Skype contact

--- a/app/static_content/kontakt.html
+++ b/app/static_content/kontakt.html
@@ -32,5 +32,7 @@
     E: <a href="mailto:objednavky@zelenakuchyne.cz">objednavky@zelenakuchyne.cz</a><br/></p>
   <p>T: <strong>+420&nbsp;222&nbsp;220&nbsp;114</strong><br/>
     E: <a href="mailto:info@zelenakuchyne.cz">info@zelenakuchyne.cz</a></p>
+  <p><small>(rozvoz)</small><br/>Skype: <a class="url" href="skype:zelena.kuchyne?call"/>zelena.kuchyne</a></p>
+<p><small>(restaurace)</small><br/>Skype: <a class="url" href="skype:restaurace.zelena.kuchyne?call"/>restaurace.zelena.kuchyne</a></p>
 </address>
 <%= render :partial => 'shared/user_sidebar'%>
