--- a/public/404.html
+++ b/public/404.html
@@ -25,7 +25,7 @@
     <body>
         <!-- This file lives in public/404.html -->
         <h1>Stránka není</h1>
-        <p>Možná ji sežral šotek. Možná je chyba mezi židlí a klávesnicí. Pokud jste přesvědčeni, že někdo něco zeslonil na naší straně, bez váhání a chmur se obraťte na  <a href="mailto:admin@zelenakuchyne.cz">administrátora</a>.</p>
+        <p>Bohužel jsme nemohli nalézt požadovanou stránku. Pokud jste přesvědčeni, že někdo něco zeslonil na naší straně, bez váhání a chmur se obraťte na  <a href="mailto:admin@zelenakuchyne.cz">administrátora</a>.</p>
         <h1>Gone fishin'</h1>
         <p>Apparently, you've reached a page that's not here anymore. Maybe it's gone fishin'. Maybe you made a typo. Either way, you can't go wrong by telling an <a href="mailto:admin@zelenakuchyne.cz">administrator</a>.</p>
     </body>
