added Chéque Déjeuner vouchers

--- a/app/static_content/rozvoz-jidel.html
+++ b/app/static_content/rozvoz-jidel.html
@@ -45,7 +45,7 @@
 Území, na kterém Zelená kuchyně služby poskytuje, je vyznačeno na mapě na stránce <a target="_blank" href="http://www.zelenakuchyne.cz/zony.html">www.zelenakuchyne.cz/zony.html</a>.</p>
 <p>Vždy se snažíme dorazit maximálně s 30minutovou odchylkou od vámi zvoleného času. Dopravu v Praze ale neovlivníme, občas tedy zpoždění nemůžeme zabránit. V takovém případě vám zavoláme nebo pošleme e-mail.</p>
 <p>Pro objednání pokrmů u nás musíte být <a href="http://www.zelenakuchyne.cz/signup">zaregistrovaní</a>. Pak už jen stačí vybrat si z <a href="http://www.zelenakuchyne.cz/menu">menu</a> a objednávku odeslat přímo ze stránek. V případě problémů s elektronickou objednávkou nám můžete zavolat na telefon&#160;<strong>222&#160;220&#160;114</strong>&#160;či napsat na adresu&#160;<a href="mailto:objednavky@zelenakuchyne.cz">objednavky@zelenakuchyne.cz</a>.</p>
-<p>K ceně objednávky účtujeme poplatek za dopravu podle výše objednávky. Platit můžete i stravenkami Ticket Restaurant či Gastropass.</p>
+<p>K ceně objednávky účtujeme poplatek za dopravu podle výše objednávky. Platit můžete i stravenkami Ticket Restaurant, Gastropass a Chéque Déjeuner.</p>
 
 <table class="fees">
     <caption>Cena dopravy pro zelenou zónu</caption>
