--- a/app/static_content/kontakt.html
+++ b/app/static_content/kontakt.html
@@ -11,20 +11,20 @@
 <% end %>
 <h1>Kontakt</h1>
 <div id="map">
-  <iframe width="350" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=cs&amp;geocode=&amp;q=mil%C3%AD%C4%8Dova+5&amp;sll=50.082315,14.463329&amp;sspn=0.041307,0.071754&amp;ie=UTF8&amp;ll=50.085055,14.450369&amp;spn=0.00413,0.006437&amp;z=16&amp;output=embed"></iframe>
+  <iframe width="350" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=cs&amp;geocode=&amp;q=Svobodova+11,+Praha+2&amp;aq=&amp;sll=50.067942,14.420609&amp;sspn=0.00865,0.019205&amp;ie=UTF8&amp;hq=&amp;hnear=Svobodova+135%2F11,+128+00+Praha+2-Vy%C5%A1ehrad,+%C4%8Cesk%C3%A1+republika&amp;t=m&amp;z=14&amp;ll=50.067942,14.420609&amp;output=embed"></iframe>
   <br/>
-  <a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=cs&amp;geocode=&amp;q=mil%C3%AD%C4%8Dova+5&amp;sll=50.082315,14.463329&amp;sspn=0.041307,0.071754&amp;ie=UTF8&amp;ll=50.085055,14.450369&amp;spn=0.00413,0.006437&amp;z=16">Zobrazit větší mapu</a>
+  <a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=cs&amp;geocode=&amp;q=Svobodova+11,+Praha+2&amp;aq=&amp;sll=50.067942,14.420609&amp;sspn=0.00865,0.019205&amp;ie=UTF8&amp;hq=&amp;hnear=Svobodova+135%2F11,+128+00+Praha+2-Vy%C5%A1ehrad,+%C4%8Cesk%C3%A1+republika&amp;t=m&amp;z=14&amp;ll=50.067942,14.420609">Zobrazit větší mapu</a>
 </div>
 <address>
   <p class="vcard"> 
-      <span class="fn org">Restaurace <strong>Zelená kuchyně</strong></span><br/>
+      <span class="fn org">Kulinářství <strong>Zelená kuchyně</strong></span><br/>
       <span class="adr">
-        <strong class="street-address">Milíčova 5</strong>,
-        <span class="locality">Praha 3–Žižkov</span>,
-        <span class="postal-code">130 00</span>
+        <strong class="street-address">Svobodova 11</strong>,
+        <span class="locality">Praha 2–Albertov</span>,
+        <span class="postal-code">120 00</span>
       </span>
   </p>
-  <p>Otevírací doba: <!--[if IE]><nobr><![endif]--><strong>Po&nbsp;&ndash;&nbsp;Pá:&nbsp;11:00&nbsp;&ndash;&nbsp;20:00</strong><!--[if IE]></nobr><![endif]--></p>
+  <p>Otevírací doba: <!--[if IE]><nobr><![endif]--><strong>Po&nbsp;&ndash;&nbsp;Pá:&nbsp;08:00&nbsp;&ndash;&nbsp;19:00</strong><!--[if IE]></nobr><![endif]--></p>
   <p>Zelená kuchyně, spol. s.r.o.<br/>
     Pod vilami 857/9, Praha 4, 140 00<br/>
     IČ: 27369404</p>
